// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridList should allow for all the children to be wrapped in the GridListCell component 1`] = `
<div>
  <div
    class="rmd-grid-list"
    style="--rmd-cell-size: 150px;"
  >
    <div
      class="rmd-grid-list__cell"
    >
      Child 1
    </div>
    <div
      class="rmd-grid-list__cell"
    >
      Child 2
    </div>
  </div>
</div>
`;

exports[`GridList should allow for all the children to be wrapped in the GridListCell component 2`] = `
<div>
  <div
    class="rmd-grid-list"
    style="--rmd-cell-size: 150px;"
  >
    <div
      class="rmd-grid-list__cell"
    >
      <div>
        Child 1
      </div>
    </div>
    <div
      class="rmd-grid-list__cell"
    >
      <div>
        Child 2
      </div>
    </div>
  </div>
</div>
`;

exports[`GridList should render correctly... (lazy test) 1`] = `
<div>
  <div
    class="rmd-grid-list"
    style="--rmd-cell-size: 140.57142857142858px;"
  >
    <span>
      Columns: 7, cellWidth: 140.57142857142858
    </span>
  </div>
</div>
`;

exports[`GridList should render correctly... (lazy test) 2`] = `
<div>
  <div
    class="rmd-grid-list"
    style="--rmd-cell-size: 328px;"
  >
    <span>
      Columns: 3, cellWidth: 328
    </span>
  </div>
</div>
`;

exports[`GridList should render correctly... (lazy test) 3`] = `
<div>
  <div
    class="rmd-grid-list"
    style="--rmd-cell-size: 140.57142857142858px;"
  >
    <div>
      This is some content!
    </div>
  </div>
</div>
`;

exports[`GridList should render correctly... (lazy test) 4`] = `
<div>
  <div
    class="rmd-grid-list"
    style="--rmd-cell-size: 328px;"
  >
    <div>
      This is some content!
    </div>
  </div>
</div>
`;
